[package]
name = "sully_input"
version = "0.1.0"
authors = ["Sullivan Muse <sullivan.muse@gmail.com>"]
edition = "2018"
license = "GNU GPLv3"
description = "Rich input for parsers"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
